# CreditCoachAI

./: .gitignore  README.md  credit_system.ipynb  credit_system_Agent.ipynb  main.py  pyproject.toml
evaluation/: eval.py  tests.jsonl
implementation/: answer.py  ingest.py
src/creditsystem/: __init__.py  cloud.py  config.py  decision.py  engine.py  handlers.py  intent.py  rag.py
tests/: benchmark_routing.py
vector_db/: chroma.sqlite3
